// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows passing additional props not consumed by the component 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="Testing ID"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`calls an onClick function 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="onclick-iconButton"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`prevents an onClick function from being called when disabled 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--disabled IconButton--deprecated Button--muted Button--disabled Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="func-iconButton"
  disabled=""
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a "muted" link type 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--muted IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a "negative" link type 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--negative IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a "positive" link type 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--positive IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a "primary" link type 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a "secondary" link type 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders as a link 1`] = `
<a
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  href="#"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</a>
`;

exports[`renders the component 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton my-extra-class IconButton--primary IconButton--deprecated Button--muted Button--trimmed"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="Button__label"
    >
      IconButton
    </span>
  </span>
</button>
`;

exports[`renders with a dropdown indicator 1`] = `
<button
  aria-label="My Icon"
  class="Button IconButton IconButton--primary IconButton--deprecated Button--muted Button--trimmed Button--is-dropdown"
  data-test-id="cf-ui-button"
  data-testid="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--secondary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <svg
      class="Icon Icon--small Icon--secondary Button__dropdown-icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
      />
      <path
        d="M0-.75h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;
